<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LANECO Read And Bill</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">"folder can't be read!"</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="err">Error</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account_number">Acct # :</string>
    <string name="name">Name :</string>
    <string name="address">Addr :</string>
    <string name="cmreading">CMRdg :</string>
    <string name="cmdiff">CMDiff :</string>
    <string name="initialreading">Init Rdg :</string>
    <string name="feedbackcode">Feedback :</string>
    <string name="reading">Reading :</string>
    <string name="kilowatthour">Kwhr</string>
    <string name="totalbill">Total Bill</string>
    <string name="remarks">Remarks :</string>
    <string name="fieldfinding">Field Finding</string>
    <string name="fieldfindingcode">FF. Code</string>
    <string name="btnconfirm">Save</string>
    <string name="btncancel">Cancel</string>
    <string name="btnconfirmandprint">Save And Print</string>
    <string name="clAccountNumber">Account Number</string>
    <string name="clName">Name</string>
    <string name="clAddress">Address</string>
    <string name="clMeterSerial">Meter Serial</string>
    <string name="clKilowatthour">Kilowatthour</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_fieldfindingentry">FieldFinding Entry</string>
    <string name="clSequence">Sequence</string>
    <string name="ssImageView">Logo</string>
    <string name="clSearchimage">SearchImage</string>
    <string name="clSearchHint">Input string for searcing</string>
    <string name="consumerListTotalRecordlabel">TotalConsumer</string>
    <string name="trans_loss">Transformer Loss</string>
    <string name="cm_kwhr">Change Mtr KWHr</string>
    <string name="tvreDemadMult">Demand Multiplier</string>
    <string name="tvreDemandReading">Demand Reading</string>
    <string name="kilowattUsed">Kw</string>
    <string name="clFieldFinding">Field Finding</string>
    <string name="clRemarks">Remarks</string>
</resources>
