<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/search" />
        <EditText android:textSize="20.0sp" android:id="@id/etslSearch" android:layout_width="fill_parent" android:layout_height="fill_parent" android:inputType="text" />
    </LinearLayout>
    <HorizontalScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.62">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="100.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clAccountNumber" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clName" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clAddress" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clMeterSerial" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clKilowatthour" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clFieldFinding" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clRemarks" />
            </LinearLayout>
            <ListView android:id="@android:id/list" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Total Read : " android:layout_weight="0.33" />
        <TextView android:textSize="20.0sp" android:gravity="right|center" android:id="@id/tvslTotalRead" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="test" android:layout_weight="0.77" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Total Unread : " android:layout_weight="0.33" />
        <TextView android:textSize="20.0sp" android:gravity="right|center" android:id="@id/tvslTotalUnread" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="test" android:layout_weight="0.77" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Total Record : " android:layout_weight="0.33" />
        <TextView android:textSize="20.0sp" android:gravity="right|center" android:id="@id/tvslTotalRecord" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="test" android:layout_weight="0.77" />
    </LinearLayout>
</LinearLayout>