<?xml version="1.0" encoding="utf-8"?>
<!-- <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/cllllSearchHolder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/search" android:contentDescription="@string/clSearchimage" />
        <EditText android:textSize="20.0sp" android:id="@id/etclSearch" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/clSearchHint" />
    </LinearLayout>
    <HorizontalScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/cllllTotalConsumerHolder" android:layout_below="@id/cllllSearchHolder">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:background="@drawable/borderbottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="110.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clAccountNumber" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clName" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clAddress" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clMeterSerial" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clKilowatthour" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clFieldFinding" />
                <TextView android:textSize="20.0sp" android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/clRemarks" />
            </LinearLayout>
            <ListView android:id="@android:id/list" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/cllllTotalConsumerHolder" android:background="@drawable/bordertop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="20.0sp" android:gravity="left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/consumerListTotalRecordlabel" />
        <TextView android:textSize="20.0sp" android:gravity="right" android:id="@id/cltvTotalConsumer" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>
-->
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/cllllSearchHolder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/search" android:contentDescription="@string/clSearchimage" />
        <EditText android:textSize="20sp" android:id="@id/etclSearch" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/clSearchHint" />
    </LinearLayout>
    <HorizontalScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/cllllTotalConsumerHolder" android:layout_below="@id/cllllSearchHolder">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:background="@drawable/borderbottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="110dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clAccountNumber" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="160dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clName" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="160dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clAddress" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="80dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clMeterSerial" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="80dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clKilowatthour" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="160dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clFieldFinding" />
                <TextView android:textSize="20sp" android:gravity="center" android:layout_width="160dp" android:layout_height="fill_parent" android:layout_marginLeft="5dp" android:text="@string/clRemarks" />
            </LinearLayout>
            <ListView android:id="@android:id/list" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/cllllTotalConsumerHolder" android:background="@drawable/bordertop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="20sp" android:gravity="left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/consumerListTotalRecordlabel" />
        <TextView android:textSize="20sp" android:gravity="right" android:id="@id/cltvTotalConsumer" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>